--- a/q/214678.html
+++ b/q/214678.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>UiuaSBCS</td><td>240729T061920Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/274545#274545">Europe20</a></td></tr>
-<tr d-ix="1"><td>023</td><td>JavaScript ES9</td><td>201103T224046Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/214690#214690">Arnauld</a></td></tr>
+<tr d-ix="0"><td>022</td><td>JavaScript ES6</td><td>201103T224046Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/214690#214690">Arnauld</a></td></tr>
+<tr d-ix="1"><td>016</td><td>UiuaSBCS</td><td>240729T061920Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/274545#274545">Europe20</a></td></tr>
 <tr d-ix="2"><td>031</td><td>Wolfram Language Mathematica</td><td>220513T204526Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/247277#247277">Romanp</a></td></tr>
 <tr d-ix="3"><td>007</td><td>Vyxal</td><td>220427T030753Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/246624#246624">naffetS</a></td></tr>
 <tr d-ix="4"><td>337</td><td>brainfuck</td><td>220430T001545Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/246714#246714">nph</a></td></tr>
@@ -66,7 +66,29 @@
 <tr d-ix="37"><td>007</td><td>Retina 0.8.2</td><td>201103T220959Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/214685#214685">Neil</a></td></tr>
 <tr d-ix="38"><td>016</td><td>05AB1E</td><td>201103T213454Z</td><td><a href="https://codegolf.stackexchange.com/questions/214678/is-it-a-rainbow-color/214680#214680">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 16 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 22 bytes</h1>
+<p><em>Suggested by <a href="https://codegolf.stackexchange.com/users/123590/andrew-bayly">Andrew Bayly</a></em></p>
+<p>Returns <strong>0</strong> or <strong>8</strong>.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;parseInt(s,35)/37&amp;8
+</code></pre>
+<p><a href="https://tio.run/##bc89D4JADAbg3Z/BIJD4MRCjicHRxN0NHQ6o5@nZXnoHhF9/GiaNHfs@TT8eqle@YePCEqmFeCujLw9OsYcThswvik2@LrbzXWwIPVlYWdJZWp25C/fxmub72TfcsoShTfL/mFihBklGsJYGSTQDoAS17cRRBlujSZLefIowyQ@lF6yOynrxFdexs@KimmkQL3MGn1LejErsfykmmiS@AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<hr />
+<h1>JavaScript (ES9), 23 bytes</h1>
+<p>Similar to <a href="https://codegolf.stackexchange.com/a/214685/58563">Neil's Retina answer</a>, but with a negative lookbehind to prevent <code>pur<b>ple</b></code> from being matched.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;/d|(?&lt;!pl)e/.test(s)
+</code></pre>
+<p><a href="https://tio.run/##bc87DsIwDAbgnVvA0mSgPQAUNk7AVhjSxg0BE0dJ2qoSdw@oEwiP/j/Lj7saVeyC9WnrSEPu6xzrQ6Vf4rhfe5RQlQliElHmjlwkhBLJiKI5hyHd5mshd6tv6MUmgN7I/5iCcgY4mQGRJk5MAHActDiwo6zT1hAno/0UaZEfKi6uOSmM7Ct@CB7ZRW2gib3MW/fg8m5WbP9TBaJF8hs" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<hr />
+<h1>JavaScript (ES6), 25 bytes</h1>
+<p>The case doesn't matter. Returns a Boolean value.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;parseInt(s,35)%385%3&gt;1
+</code></pre>
+<p><a href="https://tio.run/##bc9NC4JAEAbgez9DCBUqCBGC0GPQvZt1WHW0rW1mmV0Vf/0WnormOO8zzMdDjco1rK3fIrUQuiK4orSKHZzRJ26T5ek6O@TrrNyHhtCRgZ2hPomrCw/@Pt/i9Lj6hi6JGNoo/Y@JFfYgyQzG0CRJzwAoQW0GcZTGVvckyag/hV/kh@IrVidlnPiKHdgacVHNNImXWY1PKW9mJfa/FBMtEt4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 16 bytes</h1>
 <pre><code>∊:&quot;albedo&quot;⊢⇌↯¤9
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4oiKOiJhbGJlZG8i4oqi4oeM4oavwqQ5CkNvbG9ycyDihpAgeyJyZWQiICJvcmFuZ2UiICJ5ZWxsb3ciICJncmVlbiIgImJsdWUiICJpbmRpZ28iICJ2aW9sZXQiICJwdXJwbGUiICJicm93biIgInBpbmsiICJjeWFuIiAibWFyb29uIn0K4o2aRiBDb2xvcnMK" rel="nofollow noreferrer">Try it here!</a></p>
@@ -77,28 +99,6 @@
             ↯¤9 of the string with the length changed to 9
 ∊:&quot;albedo&quot;      one of the letters &quot;albedo&quot;?
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1>JavaScript (ES9), 23 bytes</h1>
-<p>Similar to <a href="https://codegolf.stackexchange.com/a/214685/58563">Neil's Retina answer</a>, but with a negative lookbehind to prevent <code>pur<b>ple</b></code> from being matched.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;/d|(?&lt;!pl)e/.test(s)
-</code></pre>
-<p><a href="https://tio.run/##bc87DsIwDAbgnVvA0mSgPQAUNk7AVhjSxg0BE0dJ2qoSdw@oEwiP/j/Lj7saVeyC9WnrSEPu6xzrQ6Vf4rhfe5RQlQliElHmjlwkhBLJiKI5hyHd5mshd6tv6MUmgN7I/5iCcgY4mQGRJk5MAHActDiwo6zT1hAno/0UaZEfKi6uOSmM7Ct@CB7ZRW2gib3MW/fg8m5WbP9TBaJF8hs" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<hr />
-<h1>JavaScript (ES6), 24 bytes</h1>
-<p><em>Suggested by <a href="https://codegolf.stackexchange.com/users/123590/andrew-bayly">Andrew Bayly</a></em></p>
-<p>Returns <strong>0</strong> or <strong>2</strong>.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;parseInt(s,36)*6%49&amp;2
-</code></pre>
-<p><a href="https://tio.run/##bc89C8JADAbg3Z9R0LaiDiqCSB0Fd7fqcG3T8/RMjlw/6K8/pZNixrxPyMdDdcqXbFyzRKog1Fnw2dEp9nDGJvGLzS6d76bb/WwdSkJPFlaWdBLnF26b@3CL08PkG@okYqii9D8mVqhBkgGspV4SzQAoQWFbcZTBymiSpDOfohnlh@Ir5idlvfiKa9lZcVHB1IuXOYNPKS8HJfa/FBONEt4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<hr />
-<h1>JavaScript (ES6), 25 bytes</h1>
-<p>The case doesn't matter. Returns a Boolean value.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>s=&gt;parseInt(s,35)%385%3&gt;1
-</code></pre>
-<p><a href="https://tio.run/##bc9NC4JAEAbgez9DCBUqCBGC0GPQvZt1WHW0rW1mmV0Vf/0WnormOO8zzMdDjco1rK3fIrUQuiK4orSKHZzRJ26T5ek6O@TrrNyHhtCRgZ2hPomrCw/@Pt/i9Lj6hi6JGNoo/Y@JFfYgyQzG0CRJzwAoQW0GcZTGVvckyag/hV/kh@IrVidlnPiKHdgacVHNNImXWY1PKW9mJfa/FBMtEt4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 31 bytes</h1>
 <pre><code>StringPosition[#,&quot;ro&quot;|&quot;p&quot;|&quot;c&quot;]&amp;
