--- a/q/1364.html
+++ b/q/1364.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>028</td><td>J</td><td>230719T042821Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/263012#263012">south</a></td></tr>
-<tr d-ix="1"><td>055</td><td>Raku</td><td>230718T194430Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/263000#263000">bb94</a></td></tr>
+<tr d-ix="0"><td>055</td><td>Raku</td><td>230718T194430Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/263000#263000">bb94</a></td></tr>
+<tr d-ix="1"><td>028</td><td>J</td><td>230719T042821Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/263012#263012">south</a></td></tr>
 <tr d-ix="2"><td>014</td><td>Thunno 2</td><td>230718T102051Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/262963#262963">The Thon</a></td></tr>
 <tr d-ix="3"><td>013</td><td>Jelly</td><td>171215T192513Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/150743#150743">caird co</a></td></tr>
 <tr d-ix="4"><td>057</td><td>PHP</td><td>191119T180806Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/196112#196112">640KB</a></td></tr>
 <tr d-ix="5"><td>013</td><td>05AB1E</td><td>191119T145546Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/196108#196108">Kevin Cr</a></td></tr>
 <tr d-ix="6"><td>111</td><td>C gcc</td><td>171216T212909Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/150826#150826">gastropn</a></td></tr>
 <tr d-ix="7"><td>011</td><td>Stax</td><td>190812T231442Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/189848#189848">recursiv</a></td></tr>
-<tr d-ix="8"><td>nan</td><td>jq Rn</td><td>190812T154201Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/189818#189818">alexia</a></td></tr>
+<tr d-ix="8"><td>nan</td><td>jq Rn</td><td>190812T154201Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/189818#189818">user344</a></td></tr>
 <tr d-ix="9"><td>017</td><td>Brachylog</td><td>190812T022943Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/189753#189753">Unrelate</a></td></tr>
 <tr d-ix="10"><td>018</td><td>Pyth</td><td>171215T204421Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/150750#150750">user4854</a></td></tr>
 <tr d-ix="11"><td>016</td><td>Jelly</td><td>171215T202533Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/150749#150749">DJMcMayh</a></td></tr>
@@ -76,7 +76,17 @@
 <tr d-ix="47"><td>084</td><td>J</td><td>110309T125206Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/1370#1370">Eelvex</a></td></tr>
 <tr d-ix="48"><td>115</td><td>Lua</td><td>110309T121643Z</td><td><a href="https://codegolf.stackexchange.com/questions/1364/detect-rotated-strings/1365#1365">jpjacobs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 28 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Raku</a>, 55 bytes</h1>
+
+<pre class="lang-perl6 prettyprint-override"><code>-&gt;\a,\b {my@a=a.comb;grep {b eq@a.rotate($_).join},^@a}
+</code></pre>
+<p>Returns a list of rotate positions that produce a match, which is truthy when it includes a non-zero value.</p>
+<p>If you have to output <code>Yes</code> or <code>No</code>, then the following takes 66 bytes:</p>
+<pre class="lang-perl6 prettyprint-override"><code>-&gt;\a,\b {my@a=a.comb;&lt;No Yes&gt;[?grep {b eq@a.rotate($_).join},^@a]}
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH7n1uplmb7X9cuJlEnJkmhOrfSIdE2US85PzfJOr0otUChOkkhtdAhUa8ovySxJFVDJV5TLys/M69WJ84hsfa/NVdxYqVCmoaSc35Kqnt@TpqSjoISiAbxlTTh0sUlicnZqRXJGYl56akgNRAWVJhIhUjKPFJzcvJB0uH5RTkpQIn/AA" rel="nofollow noreferrer" title="Perl 6 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 28 bytes</h1>
 <pre><code>(;:'No Yes'){::~[e.#\@]|.&quot;{]
 </code></pre>
 <p>Takes in input via function arguments.</p>
@@ -89,16 +99,6 @@
 (;:'No Yes')                  NB. ‎⁢⁡split the string, returns an array of boxed strings
             {::~              NB. ‎⁢⁢fetch using the boolen result of e., unlike {, this unboxes the result
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/nxadm/rakudo-pkg" rel="nofollow noreferrer">Raku</a>, 55 bytes</h1>
-
-<pre class="lang-perl6 prettyprint-override"><code>-&gt;\a,\b {my@a=a.comb;grep {b eq@a.rotate($_).join},^@a}
-</code></pre>
-<p>Returns a list of rotate positions that produce a match, which is truthy when non-empty.</p>
-<p>If you have to output <code>Yes</code> or <code>No</code>, then the following takes 66 bytes:</p>
-<pre class="lang-perl6 prettyprint-override"><code>-&gt;\a,\b {my@a=a.comb;&lt;No Yes&gt;[?grep {b eq@a.rotate($_).join},^@a]}
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH7n1uplmb7X9cuJlEnJkmhOrfSIdE2US85PzfJOr0otUChOkkhtdAhUa8ovySxJFVDJV5TLys/M69WJ84hsfa/NVdxYqVCmoaSc35Kqnt@TpqSjoISiAbxlTTh0sUlicnZqRXJGYl56akgNRAWVJhIhUjKPFJzcvJB0uH5RTkpQIn/AA" rel="nofollow noreferrer" title="Perl 6 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 14 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ż€ẒQM&quot;YesNo&quot;½i
