--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240730T014229Z
+"   /golfscore                                      20240730T031619Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/37624.html">Tips for Golfing in ECMAScript 6 and above      : 0037624</a>
 <a href="q/1364.html">Detect rotated strings                          : 0001364</a>
 <a href="q/60208.html">Element names above 118                         : 0060208</a>
 <a href="q/214678.html">Is It A Rainbow Color?                          : 0214678</a>
