--- a/q/274556.html
+++ b/q/274556.html
@@ -26,34 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>087</td><td>Charcoal</td><td>240729T230836Z</td><td><a href="https://codegolf.stackexchange.com/questions/274556/automatic-pikmin-count/274566#274566">Neil</a></td></tr>
+<tr d-ix="0"><td>079</td><td>Charcoal</td><td>240729T230836Z</td><td><a href="https://codegolf.stackexchange.com/questions/274556/automatic-pikmin-count/274566#274566">Neil</a></td></tr>
 <tr d-ix="1"><td>184</td><td>JavaScript Node.js</td><td>240729T163719Z</td><td><a href="https://codegolf.stackexchange.com/questions/274556/automatic-pikmin-count/274558#274558">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 87 bytes</h1>
-<pre><code>≔Ｅη⁰εＷ∧θΦζ§ηκ«≔Ｅι§ηκδＦ›Ｌιθ≔⊟Φ⟦…ιθΦι⁻§ηλ⌊δΦι⁼§ηλ⌊δΦι⁼§ηλ⌈δ⟧⁼ＬλθιＵＭε⁺κ№ιλＵＭη⁻κ№ιλ≧⁻Ｌιθ»Ｉε
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>87</s> 79 bytes</h1>
+<pre><code>Ｗ∧θΦζ⁻§ηκ№υκ«≔Ｅι§ηκεＦ›Ｌιθ≔⊟Φ⟦…ιθΦι⁻§ηλ⌊εΦι⁼§ηλ⌊εΦι⁼§ηλ⌈ε⟧⁼ＬλθιＦι⊞υκ≧⁻Ｌιθ»ＩＥη№υκ
 </code></pre>
 <p><a href="https://tio.run/##pZBNS8QwEIbP218xxwlEqBbxsKdSVAQXitfSQ2hjEzZNtl@6Kv72Os3WspW9GUgmH8@8k3cKJdrCCTOOcdfpyuJOHFBxCBkHybbBu9JGAsa2xIbDgza9bPGTQ9w/2VIeJ3TPaMBXsDlT0H8JDiWpbV5dC/jYSjHJPEtb9Qo1PTakMKen7oBznSz5KIxMlPOCDVs@QKedtkOHZ0UM85e6HmosGVvB980gzH9pcVzofIFmD@bkgVY92aQWJK6uBXVNckgN/XTPIXGD7acChsg1pX4NXcZOrXnRlerRcxxWzdsG30HaakpLRNejpLxxzKI7DlkUcpjmNc0bH2m5pei3ZCQL/SHK8/HqzfwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
-<pre><code>≔Ｅη⁰ε
-</code></pre>
-<p>Start with no Pikmin selected.</p>
-<pre><code>Ｗ∧θΦζ§ηκ«
+<pre><code>Ｗ∧θΦζ⁻§ηκ№υκ«
 </code></pre>
 <p>Repeat until either enough Pikmin have been selected or there are no remaining Pikmin of any of the recommended types.</p>
-<pre><code>≔Ｅι§ηκδ
+<pre><code>≔Ｅι§ηκε
 </code></pre>
 <p>Get a list of the counts of Pikmin of the recommended types where there are some remaining.</p>
 <pre><code>Ｆ›Ｌιθ
 </code></pre>
 <p>If there are more recommended types with some remaining then remaining Pikmin to select, then...</p>
-<pre><code>≔⊟Φ⟦…ιθΦι⁻§ηλ⌊δΦι⁼§ηλ⌊δΦι⁼§ηλ⌈δ⟧⁼Ｌλθι
+<pre><code>≔⊟Φ⟦…ιθΦι⁻§ηλ⌊εΦι⁼§ηλ⌊εΦι⁼§ηλ⌈ε⟧⁼Ｌλθι
 </code></pre>
 <p>... prefer the types with the most remaining, the types with the least remaining, the types that don't have the least remaining, or enough of the types, whichever first makes up the exact number remaining to select.</p>
-<pre><code>ＵＭε⁺κ№ιλＵＭη⁻κ№ιλ≧⁻Ｌιθ
+<pre><code>Ｆι⊞υκ≧⁻Ｌιθ»
 </code></pre>
-<p>Add one Pikmin of each of those types to the number selected, subtract one from the number remaining, and subtract the number of types from the number remaining to select.</p>
-<pre><code>»Ｉε
+<p>Add one Pikmin of each of those types to the list of Pikmin selected and subtract the number of types from the number remaining to select.</p>
+<pre><code>ＩＥη№υκ
 </code></pre>
-<p>Output the final selection.</p>
+<p>Count how many of each type of Pikmin were selected.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 184 bytes</h1>
 
