--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240730T135814Z
+"   /golfscore                                      20240730T141436Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/248352.html">Count /[^a-z]/ig with /[a-z]/ig                 : 0248352</a>
 <a href="q/269325.html">Consecutive Composite Numbers                   : 0269325</a>
 <a href="q/254947.html">Range of ASCII values                           : 0254947</a>
 <a href="q/37624.html">Tips for Golfing in ECMAScript 6 and above      : 0037624</a>
