--- a/q/263135.html
+++ b/q/263135.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>095</td><td>JavaScript V8</td><td>230725T162055Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263329#263329">Fhuvi</a></td></tr>
-<tr d-ix="1"><td>088</td><td>Zsh</td><td>240728T140459Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274509#274509">Donat</a></td></tr>
-<tr d-ix="2"><td>107</td><td>Bash</td><td>240728T163234Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274515#274515">Donat</a></td></tr>
+<tr d-ix="0"><td>104</td><td>Bash</td><td>240728T163234Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274515#274515">Donat</a></td></tr>
+<tr d-ix="1"><td>095</td><td>JavaScript V8</td><td>230725T162055Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263329#263329">Fhuvi</a></td></tr>
+<tr d-ix="2"><td>088</td><td>Zsh</td><td>240728T140459Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274509#274509">Donat</a></td></tr>
 <tr d-ix="3"><td>057</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
 <tr d-ix="4"><td>nan</td><td>R</td><td>240725T145127Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274437#274437">David Jo</a></td></tr>
 <tr d-ix="5"><td>067</td><td>Raku Perl 6 rakudo</td><td>240723T221122Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274375#274375">bb94</a></td></tr>
@@ -57,7 +57,16 @@
 <tr d-ix="28"><td>156</td><td>Swift</td><td>230721T175718Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263148#263148">Bbrk24</a></td></tr>
 <tr d-ix="29"><td>278</td><td>Vyxal</td><td>230721T162133Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263137#263137">The Empt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 95 <sup><s>98</s></sup> bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, <s>107</s> 104 bytes</h1>
+
+<pre class="lang-bash prettyprint-override"><code>for c in {1..9} {8..1}
+do printf &quot;%$[(5-c)**2]s&quot;
+sed &quot;s/\(\)/`printf %$[9-c]s`/g&quot;&lt;&lt;&lt;$[(10**c/9)**2]
+done
+</code></pre>
+<p><a href="https://tio.run/##LcxLCoAgFEDReat4SEEJagZBgjupoLLvRKPXLFy7STS/504j7iGs7gIDh4VHcq48PA3n0iezg/M67L0CydI2r5kpKK16JAkuMxAUXd4VYvibmChmehzERrTWEciSUiPUh@LMLiG8" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 95 <sup><s>98</s></sup> bytes</h1>
 <blockquote>
 <p>-3 bytes thanks to Donat</p>
 </blockquote>
@@ -73,23 +82,13 @@ and <a href="https://codegolf.stackexchange.com/a/263139/116582"><em>The Thonnu<
 <br>
 <a href="https://codegolf.stackexchange.com/users/95987/donat"><em>@Donat</em></a>, don't hesitate if you want to post this as your own answer, this is mostly your work after all :)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 88 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 88 bytes</h1>
 
 <pre class="lang-sh prettyprint-override"><code>for c ({1..9} {8..1}){w=$[(10**c/9)**2]
 printf %$[(5-c)**2]s${w///`printf %$[9-c]s`}\\n}
 </code></pre>
 <p><a href="https://tio.run/##qyrO@P8/Lb9IIVlBo9pQT8@yVqHaQk/PsFazutxWJVrD0EBLK1nfUlNLyyiWq6AoM68kTUEVKG6qmwwWK1apLtfX109ASFnqJscWJ9TGxOTV/v8PAA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
 <p>Inspired by @roblogic's nice answer.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 107 bytes</h1>
-
-<pre class="lang-bash prettyprint-override"><code>for c in {1..9} {8..1}
-do printf &quot;%$[(5-c)**2]s&quot;
-sed &quot;s/\(.\)/`printf %$[9-c]s`\1/g&quot;&lt;&lt;&lt;$[(10**c/9)**2]
-done
-</code></pre>
-<p><a href="https://tio.run/##LcxNCoAgEEDhfacYpKCExgyCBG@SQWW/G4umXXR2k2j/vjf0tHo/7ydY2BzcElE9cNeI8onGHY5zc9cMLImbtMptxnnZEotoGoGRMCmaTHR/FBqV25Y6I8XCtNbByIJzK9Tnws9N3r8" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
-<p>This has been derived from my answer for zsh.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, <s>64</s> 57 bytes</h1>
 
