--- a/q/245318.html
+++ b/q/245318.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>UiuaSBCS</td><td>240730T163135Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274578#274578">Europe20</a></td></tr>
+<tr d-ix="0"><td>034</td><td>UiuaSBCS</td><td>240730T163135Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274578#274578">Europe20</a></td></tr>
 <tr d-ix="1"><td>047</td><td>Octave</td><td>221005T003733Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/252590#252590">south</a></td></tr>
 <tr d-ix="2"><td>152</td><td>Python 3</td><td>240415T193410Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272610#272610">cnln</a></td></tr>
 <tr d-ix="3"><td>110</td><td>JSL JMP Scripting Language</td><td>240415T161444Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272604#272604">int 21h </a></td></tr>
@@ -112,16 +112,17 @@
 <tr d-ix="83"><td>056</td><td>QBasic</td><td>220319T151557Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245326#245326">DLosc</a></td></tr>
 <tr d-ix="84"><td>084</td><td>Coding</td><td>220319T144705Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245323#245323">Razetime</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 31 bytes</h1>
-<pre><code>≡↯78▽26÷255[0_87_183 255_215_0]
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, <s>31</s> 34 bytes</h1>
+<pre><code>&amp;ims≡↯78▽26÷255⊟0_87_183 255_215_0
 </code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__4omh4oavNzjilr0yNsO3MjU1WzBfODdfMTgzIDI1NV8yMTVfMF0K" rel="nofollow noreferrer">Try it here!</a></p>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__Jmltc-KJoeKGrzc44pa9MjbDtzI1NeKKnzBfODdfMTgzIDI1NV8yMTVfMAo=" rel="nofollow noreferrer">Try it here!</a></p>
 <h2>Explanation</h2>
-<pre><code>≡↯78▽26÷255[0_87_183 255_215_0]
-           [0_87_183 255_215_0] blue and yellow
-       ÷255                     divide each element by 255 so the flag shows correctly
-    ▽26                         repeat each element 26 times
-≡↯78                            turn the elements into rows 
+<pre><code>&amp;ims≡↯78▽26÷255⊟0_87_183 255_215_0
+               ⊟0_87_183 255_215_0 blue and yellow
+           ÷255                     divide each element by 255 so the flag shows correctly
+        ▽26                         repeat each element 26 times
+    ≡↯78                            turn the elements into rows
+&amp;ims                                display image to work on terminals
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://octave.org/" rel="nofollow noreferrer">Octave</a>, <s>55</s> 47 bytes</h1>
@@ -150,10 +151,10 @@ for x in[12,11,0]:w=newwin(13,78,~-y*13,0);init_pair(y,1,x);w.bkgd(' ',color_pai
 </code></pre>
 <p><a href="https://svgur.com/i/14cD.svg" rel="nofollow noreferrer">Try it online</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 34 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://uiua.org" rel="noreferrer">Uiua</a>, 34 bytes</h1>
 <pre><code>&amp;ims÷255⊂∩(↯26_78_3)0_87_183 255_215_0
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_0-dev_1__Jmltc8O3MjU14oqC4oipKOKGrzI2Xzc4XzMpMF84N18xODMgMjU1XzIxNV8wCg==" rel="nofollow noreferrer">Try it in the pad!</a></p>
+<p><a href="https://uiua.org/pad?src=0_10_0-dev_1__Jmltc8O3MjU14oqC4oipKOKGrzI2Xzc4XzMpMF84N18xODMgMjU1XzIxNV8wCg==" rel="noreferrer">Try it in the pad!</a></p>
 <h2>Explanation</h2>
 <p><code>0_87_183 255_215_0</code>: Push the RGB values on the stack</p>
 <p><code>∩(…)</code>: Apply this function to both values:</p>
