--- a/q/245318.html
+++ b/q/245318.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>075</td><td>JavaScript Node.js</td><td>240730T194718Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274580#274580">Andrew B</a></td></tr>
+<tr d-ix="0"><td>076</td><td>JavaScript Node.js</td><td>240730T194718Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274580#274580">Andrew B</a></td></tr>
 <tr d-ix="1"><td>029</td><td>UiuaSBCS+ğ</td><td>240730T163135Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274578#274578">Europe20</a></td></tr>
 <tr d-ix="2"><td>047</td><td>Octave</td><td>221005T003733Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/252590#252590">south</a></td></tr>
 <tr d-ix="3"><td>152</td><td>Python 3</td><td>240415T193410Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272610#272610">cnln</a></td></tr>
@@ -113,12 +113,13 @@
 <tr d-ix="84"><td>056</td><td>QBasic</td><td>220319T151557Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245326#245326">DLosc</a></td></tr>
 <tr d-ix="85"><td>084</td><td>Coding</td><td>220319T144705Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245323#245323">Razetime</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 75 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 76 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>for(i=0,o='';i&lt;2400;)o+=i++%60?[...'🟦🟨'][i/1200|0]:`
+<pre class="lang-javascript prettyprint-override"><code>for(i=0,o='';i&lt;2400;i++)o+=i%60?[...'🟦🟨'][i/1200|0]:`
 `;console.log(o)
 </code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/Lb9II9PWQCffVl3dOtPGyMTAwFozX9s2U1tb1czAPlpPT0/9w/z5y4B4hXpsdKa@oZGBQY1BrFUCV4J1cn5ecX5Oql5OfrpGvub//wA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/Lb9II9PWQCffVl3dOtPGyMTAwDpTW1szX9s2U9XMwD5aT09P/cP8@cuAeIV6bHSmvqGRgUGNQaxVAleCdXJ@XnF@TqpeTn66Rr7m//8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://i.sstatic.net/crLPmcgY.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/crLPmcgY.png" alt="flag" /></a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a>+<code>ğ</code></sup>, <s>31</s> <s>34</s> 29 bytes</h1>
 <pre><code>&amp;ims≡↯78▽26÷255-@ &quot; w×&quot;_&quot;ğ÷ &quot;
