--- a/q/251548.html
+++ b/q/251548.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>394</td><td>JavaScript Node.js</td><td>240731T000807Z</td><td><a href="https://codegolf.stackexchange.com/questions/251548/write-a-program-with-the-smallest-width/274584#274584">Andrew B</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>JavaScript Node.js</td><td>240731T000807Z</td><td><a href="https://codegolf.stackexchange.com/questions/251548/write-a-program-with-the-smallest-width/274584#274584">Andrew B</a></td></tr>
 <tr d-ix="1"><td>nan</td><td>Uiua</td><td>240730T205258Z</td><td><a href="https://codegolf.stackexchange.com/questions/251548/write-a-program-with-the-smallest-width/274581#274581">Europe20</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>Japt</td><td>230612T102529Z</td><td><a href="https://codegolf.stackexchange.com/questions/251548/write-a-program-with-the-smallest-width/261789#261789">Shaggy</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>05AB1E</td><td>230609T163242Z</td><td><a href="https://codegolf.stackexchange.com/questions/251548/write-a-program-with-the-smallest-width/261708#261708">Makonede</a></td></tr>
@@ -40,7 +40,7 @@
 <tr d-ix="11"><td>222</td><td>Zalgo</td><td>220902T055329Z</td><td><a href="https://codegolf.stackexchange.com/questions/251548/write-a-program-with-the-smallest-width/251558#251558">Bubbler</a></td></tr>
 <tr d-ix="12"><td>nan</td><td>K ngn/k</td><td>220902T052904Z</td><td><a href="https://codegolf.stackexchange.com/questions/251548/write-a-program-with-the-smallest-width/251556#251556">Bubbler</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 394 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, score 2762.394</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>a
 =
