--- a/q/307.html
+++ b/q/307.html
@@ -181,6 +181,7 @@
 <pre class="lang-javascript prettyprint-override"><code>[].pop.constructor('conso\154e.\154og(&quot;\110e\154\154o \\1'+9*3+'or\154\144&quot;)')()
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/OlavIL9ALzk/r7ikqDS5JL9IQx3EyY8xNDVJ1QOR@ekaSjGGhgapIA5YQCEmxlBd21LLWFs9vwgiamKipKmuqaH5/z8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Satisfies requirements 1 and 3.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>112</s> <s>100</s> 86 bytes</h1>
 
