--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240731T034646Z
+"   /golfscore                                      20240731T044900Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/26739.html">Super speedy totient function                   : 0026739</a>
 <a href="q/307.html">Obfuscated Hello World                          : 0000307</a>
 <a href="q/245318.html">Draw the Ukrainian Flag                         : 0245318</a>
 <a href="q/269325.html">Consecutive Composite Numbers                   : 0269325</a>
